--- a/bundles/org.openhwgroup.corev.ide/OSGI-INF/l10n/bundle.properties
+++ b/bundles/org.openhwgroup.corev.ide/OSGI-INF/l10n/bundle.properties
@@ -14,3 +14,15 @@
 
 Bundle-Name = OpenHW Group Core-V IDE
 Bundle-Vendor = OpenHW Group
+
+productName=OpenHW IDE
+productBlurb=OpenHW IDE\n\
+\n\
+Version: {0}\n\
+\n\
+(c) Copyright OpenHW Group and others 2020. \n\
+Visit https://www.openhwgroup.org/ \n\
+\n\
+ This product includes software developed by Eclipse Foundation, https://www.eclipse.org/.\n\
+\n\
+This product includes software developed by other open source projects including the Apache Software Foundation, https://www.apache.org/.\n
