#13 Change branding to CORE-V IDE
Changed
* "OpenHW IDE" -> "CORE-V IDE"
* "Core-V" -> "CORE-V"

Signed-off-by: Alexander Fedorov <alexander.fedorov@arsysop.ru>

--- a/bundles/org.openhwgroup.corev.ide/OSGI-INF/l10n/bundle.properties
+++ b/bundles/org.openhwgroup.corev.ide/OSGI-INF/l10n/bundle.properties
@@ -12,11 +12,11 @@
 #     Alexander Fedorov (ArSysOp) - initial API and implementation
 ###############################################################################
 
-Bundle-Name = OpenHW Group Core-V IDE
+Bundle-Name = OpenHW Group CORE-V IDE
 Bundle-Vendor = OpenHW Group
 
-productName=OpenHW IDE
-productBlurb=OpenHW IDE\n\
+productName=CORE-V IDE
+productBlurb=CORE-V IDE\n\
 \n\
 Version: {0}\n\
 \n\
