#18 Integrate CORE-V GNU-based toolchain (by Embecosm)
Add basic toolchain contributions

Signed-off-by: Alexander Fedorov <alexander.fedorov@arsysop.ru>

--- a/bundles/org.openhwgroup.corev.ide.toolchain.gnu.core/OSGI-INF/l10n/bundle.properties
+++ b/bundles/org.openhwgroup.corev.ide.toolchain.gnu.core/OSGI-INF/l10n/bundle.properties
@@ -14,3 +14,4 @@
 
 Bundle-Vendor = OpenHW Group
 Bundle-Name = OpenHW Group CORE-V IDE GNU ToolChain Core
+toolChain.name = CORE-V GNU Embedded GCC
