#18 Integrate CORE-V GNU-based toolchain (by Embecosm)
Fix concrete toolchain identifiers

Signed-off-by: Alexander Fedorov <alexander.fedorov@arsysop.ru>

--- a/bundles/org.openhwgroup.corev.ide.toolchain.gnu.core/OSGI-INF/l10n/bundle.properties
+++ b/bundles/org.openhwgroup.corev.ide.toolchain.gnu.core/OSGI-INF/l10n/bundle.properties
@@ -18,3 +18,5 @@ toolChain.name = CORE-V GNU Embedded GCC
 
 configuration.elf.debug.name = Debug
 configuration.elf.release.name = Release
+
+toolChain.llvm.name = CORE-V LLVM-based ToolChain
