#18 Integrate CORE-V GNU-based toolchain (by Embecosm)
Register concrete toolchains to make things visible for UI

Signed-off-by: Alexander Fedorov <alexander.fedorov@arsysop.ru>

--- a/bundles/org.openhwgroup.corev.ide.toolchain.gnu.core/OSGI-INF/l10n/bundle.properties
+++ b/bundles/org.openhwgroup.corev.ide.toolchain.gnu.core/OSGI-INF/l10n/bundle.properties
@@ -15,3 +15,6 @@
 Bundle-Vendor = OpenHW Group
 Bundle-Name = OpenHW Group CORE-V IDE GNU ToolChain Core
 toolChain.name = CORE-V GNU Embedded GCC
+
+configuration.elf.debug.name = Debug
+configuration.elf.release.name = Release
