#62 Create some help content
Fixed issues

Signed-off-by: Nikifor Fedorov <zelenyhleb@gmail.com>

--- a/bundles/org.openhwgroup.corev.ide.doc.user.help/OSGI-INF/l10n/bundle.properties
+++ b/bundles/org.openhwgroup.corev.ide.doc.user.help/OSGI-INF/l10n/bundle.properties
@@ -1,5 +1,5 @@
-#Properties file for org.openhwgroup.corev.ide.ui.help
-#########################
+#Properties file for org.openhwgroup.corev.ide.doc.user.help
+###############################################################################
 # Copyright (c) 2021 ArSysOp and others
 #
 # This program and the accompanying materials are made available under the
@@ -12,6 +12,6 @@
 #     Nikifor Fedorov (ArSysOp) - initial API and implementation
 ###############################################################################
 
-Bundle-Name = OpenHW Group CORE-V IDE Help
+Bundle-Name = OpenHW Group CORE-V IDE User Guide
 Bundle-Vendor = OpenHW Group
 Perspective-Name = CORE-V Development
