#62 Create some help content
Fixed project structure

Signed-off-by: Nikifor Fedorov <zelenyhleb@gmail.com>

--- a/bundles/org.openhwgroup.corev.ide.doc.user/OSGI-INF/l10n/bundle.properties
+++ b/bundles/org.openhwgroup.corev.ide.doc.user/OSGI-INF/l10n/bundle.properties
@@ -1,4 +1,4 @@
-#Properties file for org.openhwgroup.corev.ide.doc.user.help
+#Properties file for org.openhwgroup.corev.ide.doc.user
 ###############################################################################
 # Copyright (c) 2021 ArSysOp and others
 #
