#65 Add CORE-V specific project explorer
reworked id class, externalized strings

Signed-off-by: Nikifor Fedorov <zelenyhleb@gmail.com>

--- a/bundles/org.openhwgroup.corev.ide.ui.workbench/OSGI-INF/l10n/bundle.properties
+++ b/bundles/org.openhwgroup.corev.ide.ui.workbench/OSGI-INF/l10n/bundle.properties
@@ -15,3 +15,6 @@
 Bundle-Name = OpenHW Group CORE-V IDE Workbench
 Bundle-Vendor = OpenHW Group
 Perspective-Name = CORE-V Development
+ProjectsView-Name = CORE-V Projects
+Category-Name = CORE-V
+Content-Name = Project structure
