--- a/bundles/org.openhwgroup.corev.ide.toolchains.gnu.core/OSGI-INF/l10n/bundle.properties
+++ b/bundles/org.openhwgroup.corev.ide.toolchains.gnu.core/OSGI-INF/l10n/bundle.properties
@@ -1,4 +1,4 @@
-#Properties file for org.openhwgroup.corev.ide.toolchain.gnu.core
+#Properties file for org.openhwgroup.corev.ide.toolchains.gnu.core
 ###############################################################################
 # Copyright (c) 2020 ArSysOp and others
 #
