--- a/bundles/org.openhwgroup.corev.ide.toolchains.gnu.ui/OSGI-INF/l10n/bundle.properties
+++ b/bundles/org.openhwgroup.corev.ide.toolchains.gnu.ui/OSGI-INF/l10n/bundle.properties
@@ -1,6 +1,6 @@
-#Properties file for org.openhwgroup.corev.ide.toolchain.gnu.ui
+#Properties file for org.openhwgroup.corev.ide.toolchains.gnu.ui
 ###############################################################################
-# Copyright (c) 2020 ArSysOp and others
+# Copyright (c) 2020, 2021 ArSysOp and others
 #
 # This program and the accompanying materials are made available under the
 # terms of the Eclipse Public License 2.0 which is available at
