Added board and toolchain definition wizards
Signed-off-by: Nikifor Fedorov <zelenyhleb@gmail.com>

--- a/bundles/org.openhwgroup.corev.ide.definition.ui/OSGI-INF/l10n/bundle.properties
+++ b/bundles/org.openhwgroup.corev.ide.definition.ui/OSGI-INF/l10n/bundle.properties
@@ -15,4 +15,6 @@
 Bundle-Name = OpenHW Group CORE-V IDE Definition UI
 Bundle-Vendor = OpenHW Group
 category.title = CORE-V
-wizard.title = Create CORE-V Project
+wizard.project.title = Create CORE-V Project
+wizard.board.title = Define a Board
+wizard.toolchain.title = Import a Toolchain
