--- a/bundles/org.openhwgroup.corev.ide/OSGI-INF/l10n/bundle.properties
+++ b/bundles/org.openhwgroup.corev.ide/OSGI-INF/l10n/bundle.properties
@@ -1,6 +1,6 @@
 #Properties file for org.openhwgroup.corev.ide
 ###############################################################################
-# Copyright (c) 2020 ArSysOp and others
+# Copyright (c) 2020, 2021 ArSysOp and others
 #
 # This program and the accompanying materials are made available under the
 # terms of the Eclipse Public License 2.0 which is available at
@@ -20,7 +20,7 @@ productBlurb=CORE-V IDE\n\
 \n\
 Version: {0}\n\
 \n\
-(c) Copyright OpenHW Group and others 2020. \n\
+(c) Copyright OpenHW Group and others 2020, 2021. \n\
 Visit https://www.openhwgroup.org/ \n\
 \n\
  This product includes software developed by Eclipse Foundation, https://www.eclipse.org/.\n\
